--- a/4-resilia-pet/resilia-pet.css
+++ b/4-resilia-pet/resilia-pet.css
@@ -3,8 +3,7 @@ body {
   background: url("./img/background-paw.png") center fixed;
 }
 
-header,
-footer {
+header {
   display: flex;
   justify-content: space-between;
   margin: 10px 20px;
@@ -36,8 +35,9 @@ footer {
 button:hover,
 button:not(:hover),
 input:hover,
-input:not(:hover) {
-  transition-duration: 0.4s;
+input:not(:hover),
+.social-icon {
+  transition-duration: 0.2s;
 }
 
 form {
@@ -136,10 +136,50 @@ input:hover {
 }
 
 footer {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 20px;
+  padding: 30px 0 30px 20px;
+  font-size: 22px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #000;
   color: #ffffff;
-  border-right: none;
-  padding: 30px 0;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+}
+
+.footer-text {
+  letter-spacing: 1.5px;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.footer-img {
+  margin: 0 30px;
+}
+
+.social-icon {
+  filter: brightness(0.75);
+  border-radius: 30%;
+  width: 35px;
+  margin: 0 10px;
+  height: 35px;
+  background-color: #ffd000;
+}
+
+.social-icon:hover {
+  width: 37px;
+  height: 37px;
+  cursor: pointer;
+  box-shadow: 0 0 0.5rem #ffffff;
+  background-color: #ffffff;
+  filter: none;
 }
 
 @media only screen and (max-width: 700px) {
